2006-02-24  Reiner Steib  <Reiner.Steib@gmx.de>

	* nnweb.el (nnweb-type-definition, nnweb-gmane-search): Use new
	nov.php.

2006-02-24  Andreas Seltenreich  <uwi7@stud.uni-karlsruhe.de>

	* nnweb.el (nnweb-type-definition, nnweb-gmane-create-mapping)
	(nnweb-gmane-wash-article, nnweb-gmane-search): Fix Gmane web
	groups.  Kudos to Olly Betts <olly@survex.com> for providing NOV
	output on the server side.
        (nnweb-google-create-mapping): Update regexps and add some
	progress indication.

2006-02-23  Reiner Steib  <Reiner.Steib@gmx.de>

	* gnus-group.el (gnus-group-tool-bar-gnome): Fix
	gnus-agent-toggle-plugged.  Re-order icons.
	(gnus-group-tool-bar-gnome): Add
	gnus-group-{prev,next}-unread-group.
	(gnus-group-tool-bar-gnome): Re-order icons.

	* gnus-sum.el (gnus-summary-tool-bar-gnome): Move
	gnus-summary-insert-new-articles.

	* message.el (message-tool-bar-gnome, message-tool-bar-retro): Fix
	comments.

	* utf7.el (utf7-utf-16-coding-system): Fix comment.  utf-16-be is
	also available in Emacs 21.3.

	* message.el (message-fix-before-sending): Change "Emacs 22" to
	"Emacs 23 (unicode)" in comment.

	* qp.el (quoted-printable-encode-region): Change "Emacs 22" to
	"Emacs 23 (unicode)" in comment.

	* mm-util.el: Change "Emacs 22" to "Emacs 23 (unicode)" in
	comment.
	(mm-coding-system-p): Add comment about no-MULE XEmacs.

	* mm-view.el (mm-fill-flowed): Add :version.

2006-02-23  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gmm-utils.el (gmm-image-load-path): Don't modify image-load-path
	and load-path.

2006-02-22  Reiner Steib  <Reiner.Steib@gmx.de>

	* message.el: Autoload gmm-image-load-path.
	(message-tool-bar-retro): Prepend "gnus/" subdirectory to some
	icon file names.  Use old Emacs 21 "mail_send.xpm" icon for
	consitency.

	* gmm-utils.el (gmm-image-load-path): Also search in
	"../etc/images".  Don't set gmm-image-load-path if we don't find
	the image.

2006-02-22  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gmm-utils.el (gmm-image-load-path): Don't make